tests/mir/valid/calls.vit
space tests/mir/valid/calls

proc add(left: int, right: int) -> int {
  give left + right;
}

proc main() -> int {
  let first = add(1, 2);
  let second = add(add(3, 4), first);
  give second;
}
