tests/mir/invalid/bad_call_arity.vit
space tests/mir/invalid/bad_call_arity

proc add(left: int, right: int) -> int {
  give left + right;
}

proc main() -> int {
  give add(1);
}
